--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>Our Love Story</title>
+	<title>Chenxi&Xikun</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<style type="text/css">
 		@font-face {
@@ -12,10 +12,18 @@
 	<link href="css/default.css" type="text/css" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/garden.js"></script>
-    <script type="text/javascript" src="js/functions.js"></script>
+        <script type="text/javascript" src="js/functions.js"></script>
 </head>
 
 <body>
+	<audio autoplay="autoplay" loop="-1" height="100" width="100">
+
+	  <source src="music/Perfect Duet.mp3"type="audio/mp3" />
+
+	  <embed height="100" width="100" src="music/Perfect Duet.mp3" />
+
+	</audio>
+
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
@@ -35,6 +43,7 @@
 				<span class="comments">前路漫漫</span><br />
 				<span class="comments">我们一起去探索发现</span><br />
 			</div>
+<a href="blog/">
 			<div id="loveHeart">
 				<canvas id="garden"></canvas>
 				<div id="words">
@@ -48,6 +57,7 @@
 				</div>
 			</div>
 		</div>
+</a>
 		<div id="copyright">
 			Inspired by <a href="https://github.com/hackerzhou/Love">OurLoveStory</a> project.<br />
 		</div>
